# project_euler

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: answer-tests.yml  module-tests.yml  project-tests.yml
000-100/: 021_05_Amicable_numbers.ipynb  TESTING.ipynb  TESTING.py
000-100/00s/: 000_00_Example.ipynb  000_00_Example.py  001_05_Multiples_of_3_or_5.ipynb  001_05_Multiples_of_3_or_5.py  002_05_Even_Fibonacci_numbers.ipynb  002_05_Even_Fibonacci_numbers.py  003_05_Largest_prime_factor.ipynb  003_05_Largest_prime_factor.py  004_05_Largest_palindrome_product.py  005_05_Smallest_multiple.ipynb  005_05_Smallest_multiple.py  006_05_Sum_square_difference.ipynb  006_05_Sum_square_difference.py  007_05_10001st_prime.ipynb  007_05_10001st_prime.py  008_05_Largest_product_in_a_series.ipynb  008_05_Largest_product_in_a_series.py  009_05_Special_Pythagorean_triplet.ipynb  009_05_Special_Pythagorean_triplet.py
000-100/10s/: 010_05_Summation_of_primes.ipynb  010_05_Summation_of_primes.py  011_05_Largest_product_in_a_grid.ipynb  011_05_Largest_product_in_a_grid.py  012_05_Highly_divisible_triangular_numbers.ipynb  012_05_Highly_divisible_triangular_numbers.py  013_05_Large_sum.ipynb  013_05_Large_sum.py  014_05_Longest_Collatz_sequence.ipynb  014_05_Longest_Collatz_sequence.py  015_05_Lattice_paths.ipynb  015_05_Lattice_paths.py  016_05_Power_digit_sum.ipynb  016_05_Power_digit_sum.py  017_05_Number_letter_counts.ipynb  017_05_Number_letter_counts.py  018_05_BROKEN.py  018_05_Maximum_path_sum_I.ipynb  018_05_Maximum_path_sum_I.py  019_05_Counting_Sundays.ipynb  019_05_Counting_Sundays.py
000-100/20s/: 0023.ipynb  0024.ipynb  0027.ipynb  0028.ipynb  020_05_Factorial_digit_sum.ipynb  020_05_Factorial_digit_sum.py  021_05_Amicable_numbers.ipynb  021_05_Amicable_numbers.py  022_05_Name_scores.ipynb  022_05_Name_scores.py  023_05_Non-abundant_sums.ipynb  023_05_Non-abundant_sums.py  024_05_Lexicographic_permutations.ipynb  024_05_Lexicographic_permutations.py  025_05_1000-digit_Fibonacci_number.ipynb  025_05_1000-digit_Fibonacci_number.py  026_05_Reciprocal_cycles.ipynb  026_05_Reciprocal_cycles.py  027_05_Quadratic_primes.ipynb  027_05_Quadratic_primes.py  028_05_Number_spiral_diagonals.ipynb  028_05_Number_spiral_diagonals.py  029_05_Distinct_powers.ipynb  029_05_Distinct_powers.py
000-100/30s/: 0031.ipynb  0033.ipynb  0035.ipynb  0039.ipynb  030_05_Digit_fifth_powers.ipynb  030_05_Digit_fifth_powers.py  031_05_Coin_sums.ipynb  031_05_Coin_sums.py  032_05_Pandigital_products.ipynb  032_05_Pandigital_products.py  033_05_Digit_cancelling_fractions.ipynb  033_05_Digit_cancelling_fractions.py  034_05_Digit_factorials.ipynb  034_05_Digit_factorials.py  (+10 more)
0000s/: 0000.ipynb  0001.ipynb  0002.ipynb  0003.ipynb  0004.ipynb  0005.ipynb  0006.ipynb  0007.ipynb  0008.ipynb  0009.ipynb  0010.ipynb  0011.ipynb  0012.ipynb  0013.ipynb
401-500/: 0477.ipynb  477_XX_UNFINISHED.py
modules/: graphs.py  maths.py  matrices.py  parsing.py  primes.py  sequences.py  sequences_compound.py  trees.py
tests/: conftest.py
(+266 files in other folders)
