[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projecteuler"
version = "0.0.1"
authors = [
  { name="Luke Sabor", email="lukesabor@gmail.com" },
]
description = "Solution code to the problem bank from https://projecteuler.net/"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lsabor/project_euler"

[tool.black]
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = "*test*.py"
addopts = "-Wi -raP"
