[metadata]
name = project_euler
description = Solution code to the problem bank from https://projecteuler.net/
author = Luke Sabor
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = maths
python_requires = >=3.10
package_dir = modules
zip_safe = no

[tool:pytest]
python_files = *test*.py *0s.py
addopts = -Wi -raP